welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
	vuBiscuit = true
                  ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
else avance()
           ^